{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 10,
  "lineage": "6344782b-8159-d606-8292-b6b5d2e5bae5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:internet-gateway/igw-0559e78058ab7d9ee",
            "id": "igw-0559e78058ab7d9ee",
            "owner_id": "913069854077",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0631f62e1a8da7a14"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0559e78058ab7d9ee",
            "id": "r-rtb-088258413f945f3531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088258413f945f353",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:route-table/rtb-088258413f945f353",
            "id": "rtb-088258413f945f353",
            "owner_id": "913069854077",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0631f62e1a8da7a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032e9c7c0e566c6c1",
            "route_table_id": "rtb-088258413f945f353",
            "subnet_id": "subnet-0896c3412e3a2070d"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.mySubnet_1",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2bb5d3ae5b9b21d",
            "route_table_id": "rtb-088258413f945f353",
            "subnet_id": "subnet-06a911d830da0bf02"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.mySubnet_2",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:security-group/sg-072ab0e58fde44bc8",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072ab0e58fde44bc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "913069854077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "all_traffic"
            },
            "tags_all": {
              "Name": "all_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0631f62e1a8da7a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mySubnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:subnet/subnet-0896c3412e3a2070d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0896c3412e3a2070d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913069854077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet"
            },
            "tags_all": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-0631f62e1a8da7a14"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mySubnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:subnet/subnet-06a911d830da0bf02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a911d830da0bf02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913069854077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet"
            },
            "tags_all": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-0631f62e1a8da7a14"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:vpc/vpc-0631f62e1a8da7a14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f1c17ebd5235599",
            "default_route_table_id": "rtb-010b60d7f91c6b8a3",
            "default_security_group_id": "sg-06a15033de3013724",
            "dhcp_options_id": "dopt-058e36b2e1b18a476",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0631f62e1a8da7a14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010b60d7f91c6b8a3",
            "owner_id": "913069854077"
          }
        }
      ]
    }
  ]
}